# tairitsu

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile.toml  PLAN.md  PLAN2.md  PLAN3-VTTY.md  README.md  RESIZE_OBSERVER_ISSUE.md  SECURITY.md  WASMTIME_RECORD_TYPE_RESEARCH.md  WASMTIME_RECORD_TYPE_SOLUTION.md  justfile  package.json  release.toml  wasmtime_record_test.rs
.cargo/: config.toml
.github/workflows/: audit.yml  build-plugins.yml  clippy.yml  fmt.yml  publish.yml  test.yml  visual-regression.yml  wit-sync.yml
docs/: README.md  TYPE_SAFE_COMMANDS.md  VALIDATION.md  WIT_NATIVE_APPROACHES.md  migration.md  versioning.md
docs/ar/: index.md
docs/ar-SA/: index.md
docs/ar-SA/components/: index.md
docs/ar-SA/guides/: build-test-release.md  index.md  troubleshooting.md
docs/ar-SA/system/: browser-glue.md  overview.md  web-backends.md
docs/ar/guides/: index.md  migration.md
docs/ar/system/: browser-glue.md  wit-pipeline.md
docs/en/: index.md
docs/en-US/: index.md
docs/en-US/components/: index.md
docs/en-US/guides/: build-test-release.md  glossary.md  index.md  quick-start.md  troubleshooting.md  workspace-map.md
docs/en-US/system/: browser-glue.md  overview.md  runtime.md  web-backends.md  wit-pipeline.md
docs/en/components/: index.md  packages.md
docs/en/enterprise/: support.md
docs/en/guides/: getting-started.md  glossary.md  index.md  migration.md  quick-start.md  troubleshooting.md
docs/en/skills/: debug-agent.md
docs/en/system/: browser-glue.md  overview.md  vdom.md  versioning.md
docs/es/: index.md
docs/es-ES/components/: index.md
docs/es-ES/guides/: index.md
docs/es-ES/system/: browser-glue.md  overview.md
docs/es/components/: index.md  packages.md
docs/es/guides/: glossary.md  index.md  troubleshooting.md  workspace-map.md
docs/es/system/: browser-glue.md  overview.md
docs/fr/: index.md
docs/fr-FR/: index.md
docs/fr-FR/components/: index.md
docs/fr-FR/guides/: index.md  troubleshooting.md
docs/fr-FR/system/: browser-glue.md  overview.md  versioning.md
docs/ja/: index.md  security.md
docs/ko/: index.md
docs/ko-KR/: index.md
docs/ru/: index.md
docs/zh-CN/: security.md
docs/zhs/: index.md
docs/zht/: index.md
examples/: README.md  hikari_compat.rs  rsx_demo.rs
examples/guest-side/: Cargo.toml
examples/guest-side/src/: main.rs
examples/guest-side/src/html/: mod.rs  render.rs
examples/guest-side/src/model/: mod.rs
examples/hikari-ssr-test/: Cargo.toml
examples/host-side/: Cargo.toml
examples/host-side/src/: main.rs
examples/hybrid/: Cargo.toml  README.md
examples/hybrid/src/: host.rs  lib.rs
examples/mouse-events-test/: Cargo.toml
examples/mouse-events-test/src/: lib.rs
examples/todo-app/: Cargo.toml
examples/todo-app/src/: lib.rs
examples/vtty-graphics-demo/: Cargo.toml
examples/wasi-plugin/: Cargo.toml
examples/wasi-plugin/src/: lib.rs  main.rs
examples/wasi-plugin/wit/: plugin.wit
examples/web-demo/: Cargo.toml  README.md  index.html
examples/web-demo/examples/: counter.html  form.html  hover.html  index.html
examples/web-demo/src/: lib.rs
examples/website/: Cargo.toml  PLAN.md  README.md
examples/website/public/: site.css
examples/website/src/: app.rs  i18n.rs  lib.rs  markdown.rs  theme.rs
examples/website/src/components/: code_block.rs  layout.rs  mod.rs  navigation.rs
examples/website/src/pages/: builders.rs  dom_ops_test.rs  event_test.rs  home.rs  mod.rs  not_found.rs  reactive.rs  rsx_demo.rs  state_test.rs
examples/website/src/pages/components/: mod.rs
examples/website/src/pages/components/layer1/: avatar.rs  button.rs  comment.rs  description_list.rs  display.rs  empty.rs  feedback.rs  form.rs  image.rs  mod.rs  number_input.rs  search.rs  switch.rs  tag.rs
examples/website/src/pages/components/layer2/: cascader.rs  collapsible.rs  data.rs  feedback.rs  form.rs  mod.rs  navigation.rs  pagination.rs  qrcode.rs  table.rs  timeline.rs  transfer.rs  tree.rs
examples/website/src/pages/components/layer3/: editor.rs  media.rs  mod.rs  user_guide.rs  visualization.rs  zoom_controls.rs
examples/website/src/pages/guides/: build_test_release.rs  debug_api.rs  glossary.rs  migration.rs  mod.rs  quick_start.rs  workspace_map.rs
examples/website/src/pages/system/: mod.rs  overview.rs  runtime.rs  versioning.rs  web_backends.rs  wit_pipeline.rs
examples/website/src/styles/: main.scss
examples/wit-compile-time/: Cargo.toml
examples/wit-compile-time/src/: main.rs
examples/wit-dynamic/: Cargo.toml
examples/wit-dynamic-advanced/: Cargo.toml  README.md
examples/wit-dynamic-advanced/src/: guest.rs  main.rs
examples/wit-dynamic-advanced/wit/: tairitsu.wit
examples/wit-dynamic/src/: main.rs
examples/wit-native-a/: Cargo.toml  README.md
examples/wit-native-a/src/: host.rs  lib.rs
examples/wit-native-b/: Cargo.toml  README.md
examples/wit-native-b/src/: demo.rs  host.rs  lib.rs
examples/wit-native-macro/: Cargo.toml  README.md
examples/wit-native-macro/src/: demo.rs  host.rs  lib.rs  wasm_host.rs
examples/wit-native-macro/wit/: tairitsu.wit
examples/wit-native-simple/: Cargo.toml  README.md
examples/wit-native-simple/src/: demo.rs  host.rs  lib.rs  wasm_host.rs
examples/wit-runtime/: Cargo.toml
memories/repo/: website-component-startup.md
scripts/: README.md  build_cdn_demo.py  build_npm_glue_packages.py  build_wasm_packages.py  changelog.py  clean_idl_cache.py  download_wasi_adapters.py  e2e-capture.ps1  e2e-verify.ps1  fetch_w3c_idl.py  fetch_webidl.py  gen_wit_from_webidl.py  generate_browser_glue.py  generate_browser_wit.py  generate_interface_wrappers.py  init_browser_glue.py  install_packager.py  project_stats.py  publish_crates.py  publish_live.py  sync_wit.py  test_wit_generation.py  type_mapper.py  version.py  visual_capture.py  webidl_to_wit.py  wit_parser.py  wit_version.py
scripts/generator/: __init__.py  ast_parser.py  code_gen.py  config.py  logger.py  models.py
scripts/templates/: glue-module.ts.j2  index.ts.j2
wit/: tairitsu.wit  world.wit
(+78 files in other folders)
