[workspace]
members = [
    "packages/mcp",
    "packages/runtime",
    "packages/macros",
    "packages/vdom",
    "packages/web",
    "packages/hooks",
    "packages/packager",
    "packages/e2e",
    "packages/style",
    "packages/browser-wit-resolver",
    "packages/browser-worlds",
    "packages/browser-test",
    "packages/ssr",
    "packages/shared",
    "packages/mcp-plugin-browser",
    "examples/wit-compile-time",
    "examples/wit-runtime",
    "examples/wit-dynamic-advanced",
    "examples/wit-native-simple",
    "examples/wit-native-macro",
]
resolver = "2"

[patch.crates-io]
tairitsu-macros = { path = "packages/macros" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "unwind"
debug = true

[profile.dev-wasm]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.4.4"
authors = ["langyo <langyo.china@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/celestia-island/tairitsu"

[workspace.dependencies]
tokio = { version = "^1", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "signal",
] }
tairitsu = { version = "0.4.4", path = "packages/runtime" }
tairitsu-macros = { version = "0.4.4", path = "packages/macros" }
tairitsu-vdom = { version = "0.4.4", path = "packages/vdom" }
tairitsu-hooks = { version = "0.4.4", path = "packages/hooks" }
tairitsu-style = { version = "0.4.4", path = "packages/style" }
tairitsu-ssr = { version = "0.4.4", path = "packages/ssr" }
tairitsu-web = { version = "0.4.4", path = "packages/web" }
tairitsu-browser-worlds = { version = "0.4.4", path = "packages/browser-worlds" }
tairitsu-browser-wit-resolver = { version = "0.4.4", path = "packages/browser-wit-resolver" }
tairitsu-packager = { version = "0.4.4", path = "packages/packager" }
tairitsu-mcp = { version = "0.4.4", path = "packages/mcp" }
tairitsu-shared = { version = "0.4.4", path = "packages/shared" }
