[package]
authors = ["langyo <langyo.china@gmail.com>"]
name = "tairitsu-example-guest-side"

version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tairitsu-utils = { path = "../../packages/utils" }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
tokio = { version = "^1", features = ["macros", "rt", "time"] }

sqlparser = "^0.45"
sea-orm = { version = "1.0.0-rc.3", features = ["proxy"] }
yew = { version = "^0.21", features = ["ssr"] }
yew-router = "^0.18"

wasi = "0.13.0"
