[package]
authors = ["langyo <langyo.china@gmail.com>"]
name = "tairitsu-example-host-side"

version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tairitsu-utils = { path = "../../packages/utils", version = "*" }
tairitsu-vm = { path = "../../packages/vm", version = "*" }

anyhow = "^1"
bytes = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
uuid = "^1"

sea-orm = { git = "https://github.com/langyo/sea-orm", branch = "proxy-conn", features = [
  "proxy",
] }
gluesql = { version = "^0.15" }
