[package]
authors = ["langyo <langyo.china@gmail.com>"]
name = "tairitsu-example-host-side"

version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tairitsu-utils = { path = "../../packages/utils" }
tairitsu-vm = { path = "../../packages/vm" }

anyhow = "^1"
bytes = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
uuid = "^1"

sea-orm = { version = "^1", features = ["proxy"] }
gluesql = { version = "^0.15" }
