[package]
name = "tairitsu-example-todo-app"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
tairitsu-vdom = { path = "../../packages/vdom" }
tairitsu-macros = { path = "../../packages/macros" }
tairitsu-hooks = { path = "../../packages/hooks" }

[lib]
crate-type = ["rlib"]
