[package]
name = "tairitsu-example-wasi-plugin"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = "^1"
bytes = "^1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tairitsu = { path = "../../packages/runtime", features = ["dynamic"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = { version = "^0.50", features = ["macros"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasi-plugin-host"
path = "src/main.rs"
