[package]
name = "tairitsu-web-demo"
version = "0.1.0"
edition = "2021"
description = "Simple web demo using Tairitsu vdom and hooks"

[dependencies]
tairitsu-vdom = { path = "../../packages/vdom" }
tairitsu-hooks = { path = "../../packages/hooks" }
tairitsu-macros = { path = "../../packages/macros" }

# Web APIs
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3", features = ["Window", "Document", "Element", "HtmlElement", "console"] }
js-sys = "^0.3"

# Logging
console_error_panic_hook = "^0.1"
tracing = "^0.1"

[lib]
crate-type = ["cdylib", "rlib"]
