[package]
name = "tairitsu-web-demo"
version = "0.1.0"
edition = "2021"
description = "Simple web demo using Tairitsu vdom and hooks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tairitsu-vdom = { path = "../../packages/vdom" }
tairitsu-hooks = { path = "../../packages/hooks" }
tairitsu-macros = { path = "../../packages/macros" }

# Web APIs
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3", features = ["Window", "Document", "Element", "HtmlElement", "console"] }
js-sys = "^0.3"

# Logging
console_error_panic_hook = "^0.1"
tracing = "^0.1"

# Tairitsu Package 配置（替代 HTML 模板）
[package.metadata.tairitsu]
app-name = "Tairitsu Web Demo"
title = "Tairitsu Demo - Rust Web Framework"
description = "A simple demo showcasing Virtual DOM, Hooks, and rsx! macro"

[package.metadata.tairitsu.build]
target = "wasm"
output-dir = "dist"
optimize = true
sourcemap = true

[package.metadata.tairitsu.dev]
port = 3000
hot-reload = true
open-browser = true

[package.metadata.tairitsu.html]
lang = "zh-CN"
charset = "UTF-8"
viewport = "width=device-width, initial-scale=1.0"
favicon = "assets/favicon.ico"
head = """
<meta name="theme-color" content="#667eea">
<link rel="preconnect" href="https://fonts.googleapis.com">
<style>
  body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
    line-height: 1.6;
    color: #333;
    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
    min-height: 100vh;
    padding: 20px;
    margin: 0;
  }
  #app {
    max-width: 800px;
    margin: 0 auto;
    background: white;
    border-radius: 12px;
    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
    padding: 40px;
  }
  h1 {
    font-size: 2.5em;
    margin-bottom: 10px;
    text-align: center;
  }
  p {
    color: #666;
    text-align: center;
    margin: 20px 0;
  }
  .counter-section {
    background: #f5f5f5;
    padding: 20px;
    border-radius: 8px;
    margin: 20px 0;
  }
  h2 {
    font-size: 1.5em;
    margin-bottom: 15px;
    color: #444;
  }
</style>
"""
body-class = "app-container"

[package.metadata.tairitsu.assets]
inline-limit = 8192
include = ["assets/**"]
exclude = ["**/*.md"]

[package.metadata.tairitsu.css]
autoprefixer = true
minify = true

[package.metadata.tairitsu.native]
identifier = "com.tairitsu.web-demo"
icon = "assets/icon.png"
copyright = "Copyright 2024 Tairitsu"

[package.metadata.tairitsu.native.windows]
installer = "msi"

[package.metadata.tairitsu.native.macos]
category = "public.app-category.developer-tools"
minimum-system-version = "10.13"

[package.metadata.tairitsu.native.linux]
categories = ["Development", "WebDevelopment"]
