[package]
name = "tairitsu-website"
version = "0.1.0"
edition = "2021"
description = "Tairitsu framework website - documentation and demo"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Tairitsu framework packages
tairitsu-vdom = { path = "../../packages/vdom" }
tairitsu-hooks = { path = "../../packages/hooks" }
tairitsu-macros = { path = "../../packages/macros" }
tairitsu-web = { path = "../../packages/web", features = ["wit-bindings"] }

# Hikari design system (direct path to hikari workspace)
hikari-palette = { path = "../../../hikari/packages/palette" }

# Markdown rendering
pulldown-cmark = "0.12"

# Logging and error handling
tracing = "^0.1"
tracing-wasm = "^0.2"
anyhow = "^1"

# Tairitsu Package configuration (replaces HTML template)
[package.metadata.tairitsu]
app-name = "Tairitsu Framework"
title = "Tairitsu - WASM Component Runtime Engine"
description = "Documentation and demo for Tairitsu framework"

[package.metadata.tairitsu.build]
target = "component"
output_dir = "../../target/tairitsu-dist"
optimize = true
sourcemap = true

[package.metadata.tairitsu.dev]
port = 3001
hot-reload = true
open-browser = false

[package.metadata.tairitsu.html]
lang = "zh-CN"
charset = "UTF-8"
viewport = "width=device-width, initial-scale=1.0"
favicon = "public/favicon.ico"
head = """
<meta name="theme-color" content="#146e74">
<link rel="preconnect" href="https://fonts.googleapis.com">
<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Noto+Sans+SC:wght@400;500;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
<link rel="stylesheet" href="./styles.css">
<script>
(() => {
  const ROUTES = {
    '': 'home',
    '/': 'home',
    '/guides': 'guides-overview',
    '/guides/quick-start': 'guides-quick-start',
    '/guides/workspace-map': 'guides-workspace-map',
    '/guides/build-test-release': 'guides-build-test-release',
    '/guides/migration': 'guides-migration',
    '/guides/glossary': 'guides-glossary',
    '/system': 'system-overview',
    '/system/runtime': 'system-runtime',
    '/system/wit-pipeline': 'system-wit-pipeline',
    '/system/web-backends': 'system-web-backends',
    '/system/versioning': 'system-versioning',
    '/packages': 'packages-overview',
    '/packages/list': 'packages-list',
  };

  function getRouteId() {
    var hash = (location.hash || '').replace(/^#/, '');
    if (hash.length > 1 && hash[hash.length - 1] === '/') hash = hash.slice(0, -1);
    if (!hash) hash = '/';
    return ROUTES[hash] || 'not-found';
  }

  function navigate() {
    var routeId = getRouteId();
    document.querySelectorAll('.tairitsu-page').forEach(function(p) {
      p.classList.remove('is-active');
      p.setAttribute('aria-hidden', 'true');
    });
    var page = document.getElementById('page-' + routeId);
    if (page) {
      page.classList.add('is-active');
      page.removeAttribute('aria-hidden');
      window.scrollTo(0, 0);
    }
    document.querySelectorAll('.sidebar-link').forEach(function(link) {
      link.classList.remove('is-active');
    });
    var currentHash = location.hash || '#/';
    var activeLink = document.querySelector('.sidebar-link[href="' + currentHash + '"]');
    if (activeLink) { activeLink.classList.add('is-active'); }
  }

  window.addEventListener('hashchange', navigate);
  document.addEventListener('DOMContentLoaded', navigate);
})();
</script>
"""
body-class = "tairitsu-app"

[package.metadata.tairitsu.assets]
inline-limit = 8192
include = ["public/**"]
exclude = ["**/*.md"]

[package.metadata.tairitsu.css]
autoprefixer = true
minify = true

[package.metadata.tairitsu.native]
identifier = "com.tairitsu.website"
icon = "public/icon.png"
copyright = "Copyright 2024 Tairitsu"

[package.metadata.tairitsu.native.windows]
installer = "msi"

[package.metadata.tairitsu.native.macos]
category = "public.app-category.developer-tools"
minimum-system-version = "10.13"

[package.metadata.tairitsu.native.linux]
categories = ["Development", "WebDevelopment"]
