[package]
name = "tairitsu-website"
version = "0.1.0"
edition = "2024"
description = "Tairitsu framework website - documentation and demo"
publish = false
authors = ["langyo <langyo.china@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Tairitsu framework packages
tairitsu-vdom = { path = "../../packages/vdom" }
tairitsu-hooks = { path = "../../packages/hooks" }
tairitsu-macros = { path = "../../packages/macros" }
# For wasm builds, use only browser features (not server-side features like ssr/packager)
tairitsu-web = { path = "../../packages/web", features = [
    "browser",
    "wit-bindings",
], default-features = false }

# Hikari design system (direct path to hikari workspace)
hikari-palette = { path = "../../../hikari/packages/palette" }

# Markdown rendering
pulldown-cmark = "0.12"

# Logging and error handling
tracing = "^0.1"
tracing-wasm = "^0.2"
anyhow = "^1"

# Tairitsu Package configuration (replaces HTML template)
[package.metadata.tairitsu]
app-name = "Tairitsu Framework"
title = "Tairitsu - WASM Component Runtime Engine"
description = "Documentation and demo for Tairitsu framework"

[package.metadata.tairitsu.build]
target = "component"
output_dir = "../../target/tairitsu-dist"
optimize = true
sourcemap = true

[package.metadata.tairitsu.dev]
port = 3001
hot-reload = true
open-browser = false

[package.metadata.tairitsu.html]
lang = "zh-CN"
charset = "UTF-8"
viewport = "width=device-width, initial-scale=1.0"
favicon = "public/favicon.ico"
head = """
<meta name="theme-color" content="#146e74">
<link rel="preconnect" href="https://fonts.googleapis.com">
<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&family=Noto+Sans+SC:wght@400;500;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
<link rel="stylesheet" href="./styles.css">
<script>
(function() {
    'use strict';

    const ROUTES = {
        '/': 'home',
        '/guides': 'guides-overview',
        '/guides/quick-start': 'guides-quick-start',
        '/guides/workspace-map': 'guides-workspace-map',
        '/guides/build-test-release': 'guides-build-test-release',
        '/guides/migration': 'guides-migration',
        '/guides/glossary': 'guides-glossary',
        '/system': 'system-overview',
        '/system/runtime': 'system-runtime',
        '/system/wit-pipeline': 'system-wit-pipeline',
        '/system/web-backends': 'system-web-backends',
        '/system/versioning': 'system-versioning',
        '/packages': 'packages-overview',
        '/packages/list': 'packages-list',
        '/dom-ops-test': 'dom-ops-test',
    };

    function getPageId(path) {
        const cleanPath = path.endsWith('/') ? path.slice(0, -1) : path;
        return ROUTES[cleanPath] || 'not-found';
    }

    function hideAllPages() {
        document.querySelectorAll('.tairitsu-page').forEach(function(p) {
            p.classList.remove('is-active');
            p.setAttribute('aria-hidden', 'true');
        });
    }

    function showPage(pageId) {
        hideAllPages();
        const page = document.getElementById('page-' + pageId);
        if (page) {
            page.classList.add('is-active');
            page.removeAttribute('aria-hidden');
            window.scrollTo(0, 0);
        } else {
            document.getElementById('page-not-found')?.classList.add('is-active');
        }
        updateSidebarActiveState(pageId);
        updateTopNavActiveState(pageId);
    }

    function updateSidebarActiveState(pageId) {
        document.querySelectorAll('.sidebar-link').forEach(function(link) {
            link.classList.remove('is-active');
            const href = link.getAttribute('href');
            if (href && ROUTES[href] === pageId) {
                link.classList.add('is-active');
            }
        });
    }

    function updateTopNavActiveState(pageId) {
        document.querySelectorAll('.tairitsu-topnav__link').forEach(function(link) {
            link.classList.remove('is-active');
            const href = link.getAttribute('href');
            if (href) {
                const linkPageId = ROUTES[href];
                if (linkPageId === pageId) {
                    link.classList.add('is-active');
                }
            }
        });
    }

    function navigate(path) {
        const pageId = getPageId(path);
        showPage(pageId);
        if (window.history && window.history.pushState) {
            window.history.pushState({ path, pageId }, '', path);
        }
    }

    function handlePopState(event) {
        const path = window.location.pathname;
        const pageId = getPageId(path);
        showPage(pageId);
    }

    function handleLinkClick(event) {
        const link = event.target.closest('a');
        if (!link) return;
        const href = link.getAttribute('href');
        if (!href) return;
        if (!href.startsWith('/')) return;
        const isRoute = ROUTES[href] || href.startsWith('/guides/') || href.startsWith('/system/') || href.startsWith('/packages/');
        if (isRoute) {
            event.preventDefault();
            navigate(href);
        }
    }

    function initRouter() {
        const path = window.location.pathname;
        const pageId = getPageId(path);
        showPage(pageId);
        window.addEventListener('popstate', handlePopState);
        document.addEventListener('click', handleLinkClick, { passive: false });
    }

    if (document.readyState === 'loading') {
        document.addEventListener('DOMContentLoaded', initRouter);
    } else {
        setTimeout(initRouter, 50);
    }
    setTimeout(initRouter, 200);

    window.tairitsuRouter = {
        navigate: navigate,
        showPage: showPage,
        routes: ROUTES
    };
})();
</script>
"""
body-class = "tairitsu-app"

[package.metadata.tairitsu.assets]
inline-limit = 8192
include = ["public/**"]
exclude = ["**/*.md"]

[package.metadata.tairitsu.css]
autoprefixer = true
minify = true

[package.metadata.tairitsu.native]
identifier = "com.tairitsu.website"
icon = "public/icon.png"
copyright = "Copyright 2024 Tairitsu"

[package.metadata.tairitsu.native.windows]
installer = "msi"

[package.metadata.tairitsu.native.macos]
category = "public.app-category.developer-tools"
minimum-system-version = "10.13"

[package.metadata.tairitsu.native.linux]
categories = ["Development", "WebDevelopment"]
