[package]
name = "tairitsu-example-wit-compile-time"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Workspace dependencies
tairitsu = { path = "../../packages/runtime" }

# Basic language and tools
anyhow = "^1"

# Data and serialization
rand = "^0.8"

# Logging and tracing
env_logger = "^0.11"
log = { version = "^0.4", features = ["std"] }

[[bin]]
name = "compile-time-demo"
path = "src/main.rs"
